Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106972

QRenderCapture leaks memory with RHI renderer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4.2, 6.5.0 Beta1
    • 6.3.1, 6.3.2
    • Qt3D
    • None
    • Windows 11, Qt 6.3.2 MSVC 2019
    • Windows

    Description

      Memory leak when capturing using QRenderCapture with RHI renderer.

       

      Steps to reproduce:

      1. Apply the patch https://codereview.qt-project.org/c/qt/qt3d/+/434078
      2. build and run qt3d/tests/manual/rendercapture-qml
      3. check 'continuous' and push 'Render Capture'

      Memory usage increases gradually.

       

      No memory leaks with OpenGL renderer.

       

      Based on Visual Studio's analysis tools, the primary instance of the leak appears to be the instance of QD3D11ShaderResourceBindings created by the QRhiD3D11::createShaderResourceBindings() function.
      This is deleted in the RHIPipelineBase::cleanup function, which is only called when the application exits.

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            seanharmer Sean Harmer
            ayamamoto Atsushi Yamamoto
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes