RHI: Fix memory leak in RenderCommand

allocated in Renderer::setBindingAndShaderResourcesForCommand

Task-number: QTBUG-106972
Change-Id: I4d0a64f1fbb0e9037b1e4c930f91e1b55412f180
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit ca499bf7f07f7e39371f6909f3c85084be648084)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>